syntax = "proto3";

package rapid.admin_api.v1;

import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "rapid/admin_api/v1/model_tenant.proto";

message Staff {
  string id = 1;
  string tenant_id = 2;
  StaffRole role = 3;
  string auth_uid = 4;
  string display_name = 5;
  string image_url = 6;
  string email = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;

  optional Tenant tenant = 101;

  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "id",
        "tenant_id",
        "role",
        "auth_uid",
        "display_name",
        "image_url",
        "email",
        "created_at",
        "updated_at"
      ]
    }
  };
}

enum StaffRole {
  STAFF_ROLE_UNSPECIFIED = 0;
  STAFF_ROLE_NORMAL = 1;
  STAFF_ROLE_ADMIN = 2;
}
